<resources>
    <string name="app_name">HaggleBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="search_query">Search for an item</string>
    <string name="search">Search</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="upload_title">Upload Your Purchase!</string>
    <string name="imgbtn">Add Image</string>
    <string name="title">Item Name</string>
    <string name="address">Purchase Location</string>
    <string name="description">Item Description</string>
    <string name="upload_submit">Upload</string>
    <string name="price">Item Price</string>
    <string name="title_activity_display_results">DisplayResultsActivity</string>
    <string name="result_title">Search Results for: </string>
    <string name="Location">Location:</string>
    <string name="Description">Description:</string>
    <string name="Name">Name:</string>
    <string name="Price">Price:</string>
    <string name="item_name">Item Name:</string>
    <string name="item_address">Address:</string>
    <string name="average_price">Avg. Price:</string>
    <string name="lowest_price">Min. Price:</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_search_details">SearchDetails</string>
    <string name="title_activity_maps">Map</string>
    <string name="ready_to_upload">Share a\npurchase</string>
    <string name="item_rating">Rating:</string>git
    <string name="starthagglebuddy">Start\nHaggle\nBuddy</string>
    <string name="avgprice">Avg. Price: </string>
    <string name="price2">Price: </string>
    <string name="lastprice">Last Price: </string>

    <color name="newblu">#CC122C4B</color>
    <color name="offwhite">#FEFBF7</color>
    <color name="darkgray">#a3a3a3</color>
    <color name="blu">#122C4B</color>
    <string name="title_activity_redirect">Redirect</string>

    <string name="hello_world">Hello world!</string>
</resources>
