<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
    >

    <LinearLayout
        android:padding="10dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/offwhite"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:clickable="true">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:maxHeight="50dp"
                android:maxWidth="800dp"
                android:minHeight="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textname"
                android:textColor="@android:color/black"
                android:text="@string/item_name"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textaddr"
                android:textColor="@android:color/black"
                android:text="@string/item_address"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textavg"
                android:textColor="@android:color/black"
                android:text="@string/average_price"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textmin"
                android:textColor="@android:color/black"
                android:text="@string/lowest_price"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
