<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HandheldActivity"
    android:background="@drawable/marketplace"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/newblu"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/offwhite"
            android:text="@string/app_name"
            android:id="@+id/title"
            android:textSize="50sp"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:shadowColor="#454545"
            android:shadowDx="-2"
            android:shadowDy="-2"
            android:shadowRadius="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/newblu"
        android:orientation="vertical"
        android:gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <EditText
                android:id="@+id/search_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textColorHint="@color/offwhite"
                android:textSize="25sp"
                android:hint="@string/search_query"
                android:textColor="@color/offwhite"
                android:gravity="center"
                android:ellipsize="start"
                android:layout_gravity="center"
                android:singleLine="true"/>
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingBottom="0dp"
                android:background="@drawable/search1"
                android:onClick="startSearch"
                />

        </LinearLayout>

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/rounded_edittext"-->
            <!--android:textColor="@color/blu"-->
            <!--android:text="@string/ready_to_upload"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:paddingRight="5dp"-->
            <!--android:layout_marginTop="80dp"-->
            <!--android:onClick="uploadNow"-->
            <!--/>-->

        <Button
            android:id="@+id/hagglehelper"
            android:text="@string/ready_to_upload"
            android:textColor="@color/blu"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="uploadNow"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/rounded_edittext"
            android:layout_marginBottom="5dp" />
    </LinearLayout>
</LinearLayout>
